Implement angular structure for front-end functionality

--- a/calendarbooking/CalendarBooking/CalendarBooking.csproj
+++ b/calendarbooking/CalendarBooking/CalendarBooking.csproj
@@ -185,6 +185,13 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\App.js" />
+    <Content Include="App\Core\config.js" />
+    <Content Include="App\Core\core.module.js" />
+    <Content Include="App\DataServices\services.data.module.js" />
+    <Content Include="App\Main\index.html" />
+    <Content Include="App\Main\main.controller.js" />
+    <Content Include="App\Main\main.module.js" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -194,7 +201,36 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
+    <Content Include="Scripts\bower_components\angular-resource\angular-resource.js" />
+    <Content Include="Scripts\bower_components\angular-resource\angular-resource.min.js" />
+    <Content Include="Scripts\bower_components\angular-resource\index.js" />
+    <Content Include="Scripts\bower_components\angular-route\angular-route.js" />
+    <Content Include="Scripts\bower_components\angular-route\angular-route.min.js" />
+    <Content Include="Scripts\bower_components\angular-route\index.js" />
+    <Content Include="Scripts\bower_components\angular\.bower.json" />
+    <Content Include="Scripts\bower_components\angular\angular.min.js.gzip" />
+    <Content Include="Scripts\bower_components\angular\angular.min.js.map" />
+    <Content Include="Scripts\bower_components\angular\bower.json" />
+    <Content Include="Scripts\bower_components\angular\LICENSE.md" />
+    <Content Include="Scripts\bower_components\angular\package.json" />
+    <Content Include="Scripts\bower_components\angular\README.md" />
+    <Content Include="Scripts\bower_components\angular-resource\.bower.json" />
+    <Content Include="Scripts\bower_components\angular-resource\angular-resource.min.js.map" />
+    <Content Include="Scripts\bower_components\angular-resource\bower.json" />
+    <Content Include="Scripts\bower_components\angular-resource\LICENSE.md" />
+    <Content Include="Scripts\bower_components\angular-resource\package.json" />
+    <Content Include="Scripts\bower_components\angular-resource\README.md" />
+    <Content Include="Scripts\bower_components\angular-route\.bower.json" />
+    <Content Include="Scripts\bower_components\angular-route\angular-route.min.js.map" />
+    <Content Include="Scripts\bower_components\angular-route\bower.json" />
+    <Content Include="Scripts\bower_components\angular-route\LICENSE.md" />
+    <Content Include="Scripts\bower_components\angular-route\package.json" />
+    <Content Include="Scripts\bower_components\angular-route\README.md" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\bower_components\angular\angular-csp.css" />
+    <Content Include="Scripts\bower_components\angular\angular.js" />
+    <Content Include="Scripts\bower_components\angular\angular.min.js" />
+    <Content Include="Scripts\bower_components\angular\index.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
