--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
@@ -156,6 +156,8 @@
     <Content Include="App\Main\index.html" />
     <Content Include="App\Main\main.controller.js" />
     <Content Include="App\Main\main.module.js" />
+    <Content Include="App\Main\modal.controller.js" />
+    <Content Include="App\Main\modal.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
