--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
@@ -219,6 +219,7 @@
     <Content Include="Scripts\bower_components\moment\CHANGELOG.md" />
     <Content Include="Scripts\bower_components\moment\LICENSE" />
     <Content Include="Scripts\bower_components\moment\README.md" />
+    <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bower_components\angular-animate\angular-animate.js" />
     <Content Include="Scripts\bower_components\angular-animate\angular-animate.min.js" />
@@ -597,6 +598,9 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
     <Content Include="Views\Shared\_Login.cshtml" />
+    <None Include="Web.Default Settings.config">
+      <DependentUpon>Web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
