--- a/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
+++ b/calendarbooking/CalendarBookingProject/CalendarBookingProject/CalendarBookingProject.csproj
@@ -160,6 +160,7 @@
     <Content Include="App\Core\core.module.js" />
     <Content Include="App\DataServices\booking.data.js" />
     <Content Include="App\DataServices\services.data.module.js" />
+    <Content Include="App\Main\color.service.js" />
     <Content Include="App\Main\index.html" />
     <Content Include="App\Main\main.controller.js" />
     <Content Include="App\Main\main.module.js" />
